add color apis
