# src/docs/swagger.yaml
@@ -50,6 +50,15 @@ definitions:
       name:
         type: string
     type: object
+  github_com_alireza-fa_golang-car-shop_api_dto.ColorResponse:
+    properties:
+      hexCode:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   github_com_alireza-fa_golang-car-shop_api_dto.CompanyResponse:
     properties:
       country:
@@ -87,6 +96,9 @@ definitions:
         minLength: 3
         type: string
     required:
+    - carTypeId
+    - companyId
+    - gearboxId
     - name
     type: object
   github_com_alireza-fa_golang-car-shop_api_dto.CreateCarTypeRequest:
@@ -108,6 +120,20 @@ definitions:
         type: string
     required:
     - countryId
+    type: object
+  github_com_alireza-fa_golang-car-shop_api_dto.CreateColorRequest:
+    properties:
+      hexCode:
+        maxLength: 7
+        minLength: 7
+        type: string
+      name:
+        maxLength: 15
+        minLength: 3
+        type: string
+    required:
+    - hexCode
+    - name
     type: object
   github_com_alireza-fa_golang-car-shop_api_dto.CreateCompanyRequest:
     properties:
@@ -273,6 +299,23 @@ definitions:
       items:
         items:
           $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.CityResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  github_com_alireza-fa_golang-car-shop_api_dto.PagedList-github_com_alireza-fa_golang-car-shop_api_dto_ColorResponse:
+    properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.ColorResponse'
         type: array
       pageNumber:
         type: integer
@@ -498,6 +541,17 @@ definitions:
         type: integer
       name:
         maxLength: 20
+        minLength: 3
+        type: string
+    type: object
+  github_com_alireza-fa_golang-car-shop_api_dto.UpdateColorRequest:
+    properties:
+      hexCode:
+        maxLength: 7
+        minLength: 7
+        type: string
+      name:
+        maxLength: 15
         minLength: 3
         type: string
     type: object
@@ -1098,6 +1152,169 @@ paths:
       summary: GetByFilter cities
       tags:
       - Cities
+  /v1/colors/:
+    post:
+      consumes:
+      - application/json
+      description: Create a Color
+      parameters:
+      - description: Create a Color
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.CreateColorRequest'
+      responses:
+        "201":
+          description: Color response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.ColorResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a Color
+      tags:
+      - Colors
+  /v1/colors/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a Color
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a Color
+      tags:
+      - Colors
+    get:
+      consumes:
+      - application/json
+      description: Get a Color
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Color response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.ColorResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a Color
+      tags:
+      - Colors
+    put:
+      consumes:
+      - application/json
+      description: Update a Color
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a Color
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.UpdateColorRequest'
+      responses:
+        "200":
+          description: Color response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.ColorResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a Color
+      tags:
+      - Colors
+  /v1/colors/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get Colors
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: Color response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_dto.PagedList-github_com_alireza-fa_golang-car-shop_api_dto_ColorResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_alireza-fa_golang-car-shop_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get Colors
+      tags:
+      - Colors
   /v1/companies/:
     post:
       consumes:
